New exercise added, for groep 4 reading numbers

--- a/khan-exercises/exercises/breuken_optellen.html
+++ b/khan-exercises/exercises/breuken_optellen.html
@@ -45,7 +45,7 @@
         <p><code>=<var>fraction( SIMP_N1 * LCM / SIMP_D1, LCM )</var> + <var>fraction( SIMP_N2 * LCM / SIMP_D2, LCM )</var></code></p>
         <p><code>=<var>fraction( SIMP_N1 * LCM / SIMP_D1 + SIMP_N2 * LCM / SIMP_D2, LCM )</var></code></p>
         <div data-if="getGCD( SIMP_N1 * LCM / SIMP_D1 + SIMP_N2 * LCM / SIMP_D2, LCM ) !== 1">
-            <p>Simplify.</p>
+            <p>Vereenvoudig.</p>
             <p><code>=<var>fractionReduce( SIMP_N1 * LCM / SIMP_D1 + SIMP_N2 * LCM / SIMP_D2, LCM )</var></code></p>
         </div>
     </div>
