First version of the dutch divider, edited from graphie-helpers-arithmetic.js & updated division_4.html. Added some comments too.

--- a/khan-exercises/exercises/division_4.html
+++ b/khan-exercises/exercises/division_4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie graphie-helpers-arithmetic">
+<html data-translatable data-require="math graphie dutchdivider">
 <head>
     <meta charset="UTF-8" />
     <title>Delen 4</title>
@@ -16,6 +16,7 @@
 
         <div class="problems">
             <div>
+				<p>Los onderstaande staartdeling op.</p>
                 <div class="graphie" id="numbers">
                     graph.divider = new Divider( DIVISOR, DIVIDEND );
                     graph.divider.show();
