Edited a few other division exercises to use the dutch divider

--- a/khan-exercises/exercises/division_1.5.html
+++ b/khan-exercises/exercises/division_1.5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie graphie-helpers-arithmetic">
+<html data-translatable data-require="math graphie dutchdivider">
 <head>
     <meta charset="UTF-8" />
     <title>Delen 1.5</title>
@@ -27,6 +27,7 @@
 
         <div class="problems">
             <div>
+				<p>Los onderstaande staartdeling op</p>
                 <div class="graphie" id="numbers">
                     graph.divider = new Divider( DIVISOR, DIVIDEND );
                     graph.divider.show();
