--- a/khan-exercises/exercises/division_2.html
+++ b/khan-exercises/exercises/division_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math graphie graphie-helpers-arithmetic">
+<html data-require="math graphie dutchdivider">
 <head>
     <meta charset="UTF-8" />
     <title>Division 2</title>
@@ -15,7 +15,7 @@
         </div>
 
         <div class="problems">
-            <div>
+            <div><p>Los onderstaande staartdeling op.</p>
                 <div class="graphie" id="numbers">
                     graph.divider = new Divider( DIVISOR, DIVIDEND );
                     graph.divider.show();
