--- a/khan-exercises/exercises/decimalen_omzetten_in_breuken_1.html
+++ b/khan-exercises/exercises/decimalen_omzetten_in_breuken_1.html
@@ -13,7 +13,7 @@
                 <var id="D">randRange( 1, 9 ) / 10</var>
                 <var id="T">floor( D * 10 )</var>
             </div>
-            <p class="question">Druk <code><var>D.toFixed( 1 )</var></code> uit als een breuk.</p>
+            <p class="question">Druk <code><var>dutchDec(D.toFixed( 1 ))</var></code> uit als een breuk. </p>
             <p class="solution" data-type="rational" data-simplify="optional"><var>D</var></p>
             <div class="hints">
                 <p>Het getal <code><var>T</var></code> staat op de plaats van de tienden, we hebben dus <var>cardinal( T )</var> tiende<span data-if="T !== 1"></span>.</p>
@@ -21,13 +21,13 @@
             </div>
         </div>
 
-        <div id="to-the-hundredth" data-type="to-the-tenth" data-weight="3">
+       <div id="to-the-hundredth" data-type="to-the-tenth" data-weight="3">
             <div class="vars">
                 <var id="D">randRangeExclude(1, 99, [10,20,30,40,50,60,70,80,90]) / 100</var>
                 <var id="T">floor( D * 10 )</var>
                 <var id="H">floor( ( D * 100 ) % 10 )</var>
             </div>
-            <p class="question">Express <code><var>D.toFixed( 2 )</var></code> as a fraction.</p>
+            <p class="question">Druk <code><var>dutchDec(D.toFixed( 2 ))</var></code> uit als een breuk.</p>
             <p class="solution" data-type="rational" data-simplify="optional"><var>D</var></p> 
             <div class="hints">
                 <p>Het getal <code><var>T</var></code> staat op de plaats van de tienden, we hebben dus <var>cardinal( T )</var> tiende<span data-if="T !== 1"></span>.</p>
