--- a/khan-exercises/exercises/wat_komt_ervoor_erna.html
+++ b/khan-exercises/exercises/wat_komt_ervoor_erna.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math">
+<html data-translatable data-require="math math-format getallen">
 <head>
     <meta charset="UTF-8" />
     <title>Welk getal komt ervoor of erna?</title>
@@ -17,7 +17,7 @@
         <div class="problems">
             <div class="ervoor-problems">
                 <p class="question">Welk getal komt er vóór <code><var>Number</var></code>?</p>
-                <p class="solution"><code><var>VoorAnswer</var></code></p>
+                <p class="solution"><var>VoorAnswer</var></p> <!-- removed code tags -->
                 <div class="hints">
                     <p>Vóór het getal <code><var>B</var></code> komt het getal <code><var>B-1</var></code>.</p>
                     <p>Vóór het getal <code><var>Number</var></code> komt dus ook <code><var>VoorAnswer</var></code>.</p>.
@@ -26,7 +26,7 @@
 
             <div class="erna-problems">
                 <p class="question">Welk getal komt er na <code><var>Number</var></code>?</p>
-                <p class="solution"><code><var>NaAnswer</var></code></p>
+                <p class="solution"><var>NaAnswer</var></p>
                 <div class="hints">
                     <p>Na het getal <code><var>B</var></code> komt het getal <code><var>B+1</var></code>.</p>
                     <p>Na het getal <code><var>Number</var></code> komt dus ook <code><var>NaAnswer</var></code>.</p>.
