--- a/khan-exercises/exercises/aanvullen_tot_100.html
+++ b/khan-exercises/exercises/aanvullen_tot_100.html
@@ -15,20 +15,19 @@
         <var id="Answer">100-Number</var>
         <var id="firstdif">plus10-Number</var>
         <var id="seconddif">100-plus10</var>
-    </div>
+        </div>
         <div class="problems">
-            <div class="ervoor-problems">
+            <div class="problemas extraordinarias">
                 <p class="question">Vul het getal <code><var>Number</var></code> aan tot 100.</p>
-                <p class="solution"><var>Answer</var></p> 
-                <div class="hints">
-                    <!-- <div data-if="B === 0"> -->
-                    <p>Van <code><var>Number</var></code> tot <code><var>plus10</var></code> is <code><var>plus10</var> - <var>Number</var> = <var>firstdif</var></code>.</p>
-                    <p>Van <code><var>plus10</var></code> tot <code>100</code> is het <code>100 - <var>plus10</var></code> = <var>seconddif</var>.</p>.
-                    <p>Dus van <code><var>Number</var></code> tot <code>100</code> is het <code><var>firstdif</var> + <var>seconddif</var> = <var>Answer</var>.</p>
-                    </div>            
-                </div>
+                <p class="solution"><var>Answer</var></p>
             </div>
         </div>
+        <div class="hints">
+            <!-- <div data-if="B === 0"> -->
+            <p>Van <code><var>Number</var></code> tot <code><var>plus10</var></code> is <code><var>plus10</var> - <var>Number</var> = <var>firstdif</var></code>.</p>
+            <p>Van <code><var>plus10</var></code> tot <code>100</code> is het <code>100 - <var>plus10</var></code> = <var>seconddif</var>.</p>.
+            <p>Dus van <code><var>Number</var></code> tot <code>100</code> is het <code><var>firstdif</var> + <var>seconddif</var> = <var>Answer</var>.</p>
+        </div>            
     </div>
 </body>
 </html>
