Edited exercises: added new ones (no hints yet)

--- a/khan-exercises/exercises/Ligt_getal_voor_of_na_tot_100.html
+++ b/khan-exercises/exercises/Ligt_getal_voor_of_na_tot_100.html
@@ -28,10 +28,8 @@
         </div>
         <div class="hints">
             <div data-if="A == 0 && C == 0">
-                <div>
-                    <p data-tt="hintA1">Het getal <code><var>Number1</var></code> en het getal <code><var>Number2</var></code> bestaan beide uit één cijfer.</p> 
-                    <p data-tt="hintA2"> Aangezien <code><var>WrongAnswer</var></code> vóór <code><var>CorrectAnswer</var></code></p> komt in de getallenlijn is het antwoord <code><var>CorrectAnswer</var></code>.</p>
-                </div>
+                <p>Het getal <code><var>Number1</var></code> en het getal <code><var>Number2</var></code> bestaan beide uit één cijfer.</p> 
+                <p> Aangezien <code><var>WrongAnswer</var></code> vóór <code><var>CorrectAnswer</var></code></p> komt in de getallenlijn is het antwoord <code><var>CorrectAnswer</var></code>.</p>
             </div>
 
             <div data-else-if="A == 0 && C !==0">
