--- a/khan-exercises/exercises/aanvullen_tot_100.html
+++ b/khan-exercises/exercises/aanvullen_tot_100.html
@@ -18,15 +18,15 @@
         </div>
         <div class="problems">
             <div class="problemas extraordinarias">
-                <p class="question">Vul het getal <code><var>Number</var></code> aan tot 100.</p>
+                <p class="question">Vul het getal <var>Number</var> aan tot 100.</p>
                 <p class="solution"><var>Answer</var></p>
             </div>
         </div>
         <div class="hints">
             <!-- <div data-if="B === 0"> -->
-            <p>Van <code><var>Number</var></code> tot <code><var>plus10</var></code> is <code><var>plus10</var> - <var>Number</var> = <var>firstdif</var></code>.</p>
-            <p>Van <code><var>plus10</var></code> tot <code>100</code> is het <code>100 - <var>plus10</var></code> = <var>seconddif</var>.</p>.
-            <p>Dus van <code><var>Number</var></code> tot <code>100</code> is het <code><var>firstdif</var> + <var>seconddif</var> = <var>Answer</var>.</p>
+            <p>Van <var>Number</var> tot <var>plus10</var> is <var>plus10</var> - <var>Number</var> = <var>firstdif</var>.</p>
+            <p>Van <var>plus10</var> tot 100 is het 100 - <var>plus10</var> = <var>seconddif</var>.</p>.
+            <p>Dus van <var>Number</var> tot 100 is het <var>firstdif</var> + <var>seconddif</var> = <var>Answer</var>.</p>
         </div>            
     </div>
 </body>
