--- a/khan-exercises/exercises/aanvullen_tot_100.html
+++ b/khan-exercises/exercises/aanvullen_tot_100.html
@@ -24,8 +24,10 @@
         </div>
         <div class="hints">
             <!-- <div data-if="B === 0"> -->
-            <p>Van <var>Number</var> tot <var>plus10</var> is <var>plus10</var> - <var>Number</var> = <var>firstdif</var>.</p>
-            <p>Van <var>plus10</var> tot 100 is het 100 - <var>plus10</var> = <var>seconddif</var>.</p>.
+            <p>Eerst vullen we <var>Number</var> aan tot het dichtsbijzijnde tiental, namelijk <var>plus10</var>.</p>
+            <p>Van <var>Number</var> tot <var>plus10</var> is dat <var>plus10</var> - <var>Number</var> = <var>firstdif</var>.</p>
+            <p>Van <var>plus10</var> kunnen we aanvullen tot 100.</p>
+            <p>Dat is 100 - <var>plus10</var> = <var>seconddif</var>.</p>.
             <p>Dus van <var>Number</var> tot 100 is het <var>firstdif</var> + <var>seconddif</var> = <var>Answer</var>.</p>
         </div>            
     </div>
