Two new exercises (one not yet finished) + an edit

--- a/khan-exercises/exercises/graphing_points_2.html
+++ b/khan-exercises/exercises/graphing_points_2.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie expressions">
     <head>
     <meta charset="UTF-8" />
-    <title>Punten op een Grafiek 2</title>
+    <title>Punten op een grafiek 2</title>
         <script src="../khan-exercise.js"></script>
     </head>
     <body>
