Edited for feedback

--- a/khan-exercises/exercises/parabola_intuition_1.html
+++ b/khan-exercises/exercises/parabola_intuition_1.html
@@ -22,7 +22,7 @@
         <div class="problems">
             <div>
                 <p class="question" data-tt="question1">Pas de coëfficiënt van de hoogste graad en de coördinaten van de top zo aan dat de blauwe parabool precies samenvalt met de oranje parabool.</p>
-
+                <p class="extra-info"><i>(Wat is de invloed van de getallen op de vorm en de plaats van een parabool?)</i></p>
                 <div class="graphie" id="grid">
                     graphInit({
                         range: 10,
