--- a/khan-exercises/exercises/tafel_van_346789.html
+++ b/khan-exercises/exercises/tafel_van_346789.html
@@ -25,78 +25,21 @@
                     </div>
                 <div class="solution"><var>Answer</var></div> 
                 <div class="hints">
-                    <div data-if="B === 3">
-                        <p>1 x 3 = 3</p>
-                        <p>2 x 3 = 6</p>
-                        <p>3 x 3 = 9</p>
-                        <p>4 x 3 = 12</p>
-                        <p>5 x 3 = 15</p>
-                        <p>6 x 3 = 18</p>
-                        <p>7 x 3 = 21</p>
-                        <p>8 x 3 = 24</p>
-                        <p>9 x 3 = 27</p>
-                        <p>10 x 3 = 30</p>
-                    </div>
-                    <div data-else-if="B === 4">
-                        <p>1 x 4 = 4</p>
-                        <p>2 x 4 = 8</p>
-                        <p>3 x 4 = 12</p>
-                        <p>4 x 4 = 16</p>
-                        <p>5 x 4 = 20</p>
-                        <p>6 x 4 = 24</p>
-                        <p>7 x 4 = 28</p>
-                        <p>8 x 4 = 32</p>
-                        <p>9 x 4 = 36</p>
-                        <p>10 x 4 = 40</p>
-                    </div>
-                    <div data-else-if="B === 6">
-                        <p>1 x 6 = 6</p>
-                        <p>2 x 6 = 12</p>
-                        <p>3 x 6 = 18</p>
-                        <p>4 x 6 = 24</p>
-                        <p>5 x 6 = 30</p>
-                        <p>6 x 6 = 36</p>
-                        <p>7 x 6 = 42</p>
-                        <p>8 x 6 = 48</p>
-                        <p>9 x 6 = 54</p>
-                        <p>10 x 6 = 60</p>
-                    </div>
-                    <div data-else-if="B === 7">
-                        <p>1 x 7 = 7</p>
-                        <p>2 x 7 = 14</p>
-                        <p>3 x 7 = 21</p>
-                        <p>4 x 7 = 28</p>
-                        <p>5 x 7 = 35</p>
-                        <p>6 x 7 = 42</p>
-                        <p>7 x 7 = 49</p>
-                        <p>8 x 7 = 56</p>
-                        <p>9 x 7 = 63</p>
-                        <p>10 x 7 = 70</p>
-                    </div> 
-                    <div data-else-if="B === 8">
-                        <p>1 x 8 = 8</p>
-                        <p>2 x 8 = 16</p>
-                        <p>3 x 8 = 24</p>
-                        <p>4 x 8 = 32</p>
-                        <p>5 x 8 = 40</p>
-                        <p>6 x 8 = 48</p>
-                        <p>7 x 8 = 56</p>
-                        <p>8 x 8 = 64</p>
-                        <p>9 x 8 = 72</p>
-                        <p>10 x 8 = 80</p>
-                    </div>   
-                    <div data-else-if="B === 9">
-                        <p>1 x 9 = 9</p>
-                        <p>2 x 9 = 18</p>
-                        <p>3 x 9 = 27</p>
-                        <p>4 x 9 = 36</p>
-                        <p>5 x 9 = 45</p>
-                        <p>6 x 9 = 54</p>
-                        <p>7 x 9 = 63</p>
-                        <p>8 x 9 = 72</p>
-                        <p>9 x 9 = 81</p>
-                        <p>10 x 9 = 90</p>
-                    </div>              
+                    <p>Dit is onderdeel van de tafel van <var>B</var>. Denk aan de tafel van <var>B</var> in je hoofd.
+                    </p>
+                    <div>Dit is de tafel van <var>B</var> op volgorde:
+                        <br>1 x <var>B</var> = <var> 1 * B</var>
+                        <br>2 x <var>B</var> = <var> 2 * B</var>
+                        <br>3 x <var>B</var> = <var> 3 * B</var>
+                        <br>4 x <var>B</var> = <var> 4 * B</var>
+                        <br>5 x <var>B</var> = <var> 5 * B</var>
+                        <br>6 x <var>B</var> = <var> 6 * B</var>
+                        <br>7 x <var>B</var> = <var> 7 * B</var>
+                        <br>8 x <var>B</var> = <var> 8 * B</var>
+                        <br>9 x <var>B</var> = <var> 9 * B</var>
+                        <br>10 x <var>B</var> = <var> 10 * B</var></div>
+                    <div>
+                    <p>Dus het antwoord is <var>A</var> x <var>B</var> = <var> A * B</var>.</p>            
                 </div>
             </div>
         </div>
