--- a/khan-exercises/exercises/tafel_van_12510.html
+++ b/khan-exercises/exercises/tafel_van_12510.html
@@ -25,54 +25,21 @@
                     </div>
                 <div class="solution"><var>Answer</var></div> 
                 <div class="hints">
-                    <div data-if="B === 1">
-                        <p>1 x 1 = 1</p>
-                        <p>2 x 1 = 2</p>
-                        <p>3 x 1 = 3</p>
-                        <p>4 x 1 = 4</p>
-                        <p>5 x 1 = 5</p>
-                        <p>6 x 1 = 6</p>
-                        <p>7 x 1 = 7</p>
-                        <p>8 x 1 = 8</p>
-                        <p>9 x 1 = 9</p>
-                        <p>10 x 1 = 10</p>
-                    </div>
-                    <div data-if="B === 2">
-                        <p>1 x 2 = 2</p>
-                        <p>2 x 2 = 4</p>
-                        <p>3 x 2 = 6</p>
-                        <p>4 x 2 = 8</p>
-                        <p>5 x 2 = 10</p>
-                        <p>6 x 2 = 12</p>
-                        <p>7 x 2 = 14</p>
-                        <p>8 x 2 = 16</p>
-                        <p>9 x 2 = 18</p>
-                        <p>10 x 2 = 20</p>
-                    </div>
-                    <div data-if="B === 5">
-                        <p>1 x 5 = 5</p>
-                        <p>2 x 5 = 10</p>
-                        <p>3 x 5 = 15</p>
-                        <p>4 x 5 = 20</p>
-                        <p>5 x 5 = 25</p>
-                        <p>6 x 5 = 30</p>
-                        <p>7 x 5 = 35</p>
-                        <p>8 x 5 = 40</p>
-                        <p>9 x 5 = 45</p>
-                        <p>10 x 5 = 50</p>
-                    </div>
-                    <div data-if="B===10">
-                       <p>1 x 10 = 10</p>
-                        <p>2 x 10 = 20</p>
-                        <p>3 x 10 = 30</p>
-                        <p>4 x 10 = 40</p>
-                        <p>5 x 10 = 50</p>
-                        <p>6 x 10 = 60</p>
-                        <p>7 x 10 = 70</p>
-                        <p>8 x 10 = 80</p>
-                        <p>9 x 10 = 90</p>
-                        <p>10 x 10 = 100</p>
-                    </div>            
+                     <p>Dit is onderdeel van de tafel van <var>B</var>. Denk aan de tafel van <var>B</var> in je hoofd.
+                    </p>
+                    <div>Dit is de tafel van <var>B</var> op volgorde:
+                        <br>1 x <var>B</var> = <var> 1 * B</var>
+                        <br>2 x <var>B</var> = <var> 2 * B</var>
+                        <br>3 x <var>B</var> = <var> 3 * B</var>
+                        <br>4 x <var>B</var> = <var> 4 * B</var>
+                        <br>5 x <var>B</var> = <var> 5 * B</var>
+                        <br>6 x <var>B</var> = <var> 6 * B</var>
+                        <br>7 x <var>B</var> = <var> 7 * B</var>
+                        <br>8 x <var>B</var> = <var> 8 * B</var>
+                        <br>9 x <var>B</var> = <var> 9 * B</var>
+                        <br>10 x <var>B</var> = <var> 10 * B</var></div>
+                    <div>
+                    <p>Dus het antwoord is <var>A</var> x <var>B</var> = <var> A * B</var>.</p> 
                 </div>
             </div>
         </div>
