--- a/khan-exercises/exercises/splitsen_tot_100.html
+++ b/khan-exercises/exercises/splitsen_tot_100.html
@@ -36,22 +36,22 @@
                 <div class="solution"><var>Answer</var></div> 
                 <div class="hints">
                     <div data-if="B === 0">
-                        <p data-tt="hint1">Van <code><var>Number2</var></code> naar <code><var>plus10</var></code> is er <code><var>plus10</var> - <var>Number2</var> = <var>firstdif</var></code> nodig.</p>
-                        <p data-tt="hint2">Van <code><var>plus10</var></code> naar <code><var>minusX</var></code> is er <code><var>minusX</var> - <var>plus10</var> = <var>seconddif</var></code> nodig.</p>
-                        <p data-tt="hint3">Dus om <code><var>Number1</var></code> op te splitsen met <code><var>Number2</var></code> hebben we <code><var>firstdif</var> + <var>seconddif</var> = <var>Answer</var></code> nodig.</p>
+                        <p data-tt="hint1">Van <var>Number2</var> naar <var>plus10</var> is er <var>plus10</var> - <var>Number2</var> = <var>firstdif</var> nodig.</p>
+                        <p data-tt="hint2">Van <var>plus10</var> naar <var>minusX</var> is er <var>minusX</var> - <var>plus10</var> = <var>seconddif</var> nodig.</p>
+                        <p data-tt="hint3">Dus om <var>Number1</var> op te splitsen met <var>Number2</var> hebben we <var>firstdif</var> + <var>seconddif</var> = <var>Answer</var> nodig.</p>
                     </div>
                     <div data-if="D === 0">
-                        <p data-tt="hint1">Van <code><var>Number2</var></code> naar <code><var>minusX</var></code> is <code><var>minusX</var> - <var>Number2</var> = <var>specfirstdif</var></code>.</p>
-                        <p data-tt="hint2">Van <code><var>minusX</var></code> naar <code><var>Answer</var></code> is <code><var>Answer</var> - <var>minusX</var> = <var>thirddiff</var></code>.</p>
+                        <p data-tt="hint1">Van <var>Number2</var> naar <var>minusX</var> is <var>minusX</var> - <var>Number2</var> = <var>specfirstdif</var>.</p>
+                        <p data-tt="hint2">Van <var>minusX</var> naar <var>Answer</var> is <var>Answer</var> - <var>minusX</var> = <var>thirddiff</var>.</p>
                     </div>
                     <div data-if="A === 0">
-                        <p>Van <code><var>Number2</var></code> naar <code><var>Number1</var></code> is het <code><var>Answer</var></code>.</p>.
+                        <p>Van <var>Number2</var> naar <var>Number1</var> is het <var>Answer</var>.</p>.
                     </div>
                     <div data-else>
-                        <p data-tt="hint1">Van <code><var>Number2</var></code> naar <code><var>plus10</var></code> is er <code><var>plus10</var> - <var>Number2</var> = <var>firstdif</var></code> nodig.</p>
-                        <p data-tt="hint2">Van <code><var>plus10</var></code> naar <code><var>minusX</var></code> is er <code><var>minusX</var> - <var>plus10</var> = <var>seconddif</var></code> nodig.</p>
-                        <p data-tt="hint3">Van <code><var>minusX</var></code> naar <code><var>Number1</var></code> is er <code><var>Number1</var> - <var>minusX</var> = <var>thirddif</var></code> nodig.</p>
-                        <p data-tt="hint4">Dus om <code><var>Number1</var></code> op te splitsen met <code><var>Number2</var></code> hebben we <code><var>firstdif</var> + <var>seconddif</var> + <var>thirddif</var> = <var>Answer</var></code>.</p> 
+                        <p data-tt="hint1">Van <var>Number2</var> naar <var>plus10</var> is er <var>plus10</var> - <var>Number2</var> = <var>firstdif</var> nodig.</p>
+                        <p data-tt="hint2">Van <var>plus10</var> naar <var>minusX</var> is er <var>minusX</var> - <var>plus10</var> = <var>seconddif</var> nodig.</p>
+                        <p data-tt="hint3">Van <var>minusX</var> naar <var>Number1</var> is er <var>Number1</var> - <var>minusX</var> = <var>thirddif</var> nodig.</p>
+                        <p data-tt="hint4">Dus om <var>Number1</var> op te splitsen met <var>Number2</var> hebben we <var>firstdif</var> + <var>seconddif</var> + <var>thirddif</var> = <var>Answer</var>.</p> 
                     </div>            
                 </div>
             </div>
