--- a/khan-exercises/exercises/wat_komt_ervoor_erna.html
+++ b/khan-exercises/exercises/wat_komt_ervoor_erna.html
@@ -16,20 +16,20 @@
     </div>
         <div class="problems">
             <div class="ervoor-problems">
-                <p class="question">Welk getal komt er vóór <code><var>Number</var></code>?</p>
-                <p class="solution"><var>VoorAnswer</var></p> <!-- removed code tags -->
+                <p class="question">Welk getal komt er vóór <var>Number</var>?</p>
+                <p class="solution"><var>VoorAnswer</var></p>
                 <div class="hints">
-                    <p>Vóór het getal <code><var>B</var></code> komt het getal <code><var>B-1</var></code>.</p>
-                    <p>Vóór het getal <code><var>Number</var></code> komt dus ook <code><var>VoorAnswer</var></code>.</p>.
+                    <p>Vóór het getal <var>B</var> komt het getal <var>B-1</var>.</p>
+                    <p>Vóór het getal <var>Number</var> komt dus ook <var>VoorAnswer</var>.</p>.
                 </div>
             </div>
 
             <div class="erna-problems">
-                <p class="question">Welk getal komt er na <code><var>Number</var></code>?</p>
+                <p class="question">Welk getal komt er na <var>Number</var>?</p>
                 <p class="solution"><var>NaAnswer</var></p>
                 <div class="hints">
-                    <p>Na het getal <code><var>B</var></code> komt het getal <code><var>B+1</var></code>.</p>
-                    <p>Na het getal <code><var>Number</var></code> komt dus ook <code><var>NaAnswer</var></code>.</p>.
+                    <p>Na het getal <var>B</var> komt het getal <var>B+1</var>.</p>
+                    <p>Na het getal <var>Number</var> komt dus ook <var>NaAnswer</var>.</p>.
                 </div>              
             </div>
         </div>
