--- a/khan-exercises/exercises/de_helft.html
+++ b/khan-exercises/exercises/de_helft.html
@@ -15,13 +15,13 @@
 
         <div class="problems">
             <div class="problemas extraordinarias">
-                <p class="question">Wat is de helft van <code><var>Number</var></code>?</p>
+                <p class="question">Wat is de helft van <var>Number</var>?</p>
                 <p class="solution"><var>Answer</var></p>
             </div>
         </div>
 
         <div class="hints">
-            <div>Stel je hebt <code><var>Number</var></code> knikkers.
+            <div>Stel je hebt <var>Number</var> knikkers.
                 <div class="graphie">
                     init({
                     range: [[-24, 24], [-5, 10]],
@@ -34,16 +34,16 @@
                     });
 
                     for(i=1;i <= <var>Answer</var>;i++) {circle([-25+(3*i), 0], 1, {
-                    fill: "purple",
-                    stroke: "red",
+                    fill: "teal",
+                    stroke: "gray",
                     strokeWidth: 5,
                     opacity: 0.6
                     });
                     }
 
                     for(i=1;i <= <var>Answer</var>;i++) {circle([-25+(3*i), 5], 1, {
-                    fill: "purple",
-                    stroke: "red",
+                    fill: "teal",
+                    stroke: "gray",
                     strokeWidth: 5,
                     opacity: 0.6
                     });
@@ -64,8 +64,8 @@
                     });
 
                     for(i=1;i <= <var>Answer</var>;i++) {circle([-25+(3*i), 12], 1, {
-                    fill: "purple",
-                    stroke: "red",
+                    fill: "teal",
+                    stroke: "gray",
                     strokeWidth: 5,
                     opacity: 0.6
                     });
@@ -73,7 +73,7 @@
                 </div>
             </div> 
         
-            <div>Door terug te tellen kom je uit op <code><var>Answer</var></code> knikker<span data-if="Number !== 1">s</span>.
+            <div>Door terug te tellen kom je uit op <var>Answer</var> knikker<span data-if="Answer !== 1">s</span>.
             </div>
         </div>            
     </div>
