--- a/khan-exercises/exercises/het_dubbele.html
+++ b/khan-exercises/exercises/het_dubbele.html
@@ -15,13 +15,13 @@
 
         <div class="problems">
             <div class="problemas extraordinarias">
-                <p class="question">Wat is het dubbele van <code><var>Number</var></code>?</p>
+                <p class="question">Wat is het dubbele van <var>Number</var>?</p>
                 <p class="solution"><var>Answer</var></p>
             </div>
         </div>
 
         <div class="hints">
-            <div>Stel je hebt <code><var>Number</var></code> knikker<span data-if="Number !== 1">s</span>.
+            <div>Stel je hebt <var>Number</var> knikker<span data-if="Number !== 1">s</span>.
                 <div class="graphie" id="knikkers">
                     init({
                     range: [[-24, 24], [-5, 5]],
@@ -34,8 +34,8 @@
                     });
 
                     for(i=1;i <= <var>Number</var>;i++) {circle([-25+(3*i), 0], 1, {
-                    fill: "purple",
-                    stroke: "red",
+                    fill: "teal",
+                    stroke: "gray",
                     strokeWidth: 5,
                     opacity: 0.6
                     });
@@ -43,7 +43,7 @@
                 </div>
             </div>
 
-            <div>Daar komen bij het verdubbelen precies <code><var>Number</var></code> knikker<span data-if="Number !== 1">s</span> bij. Nu hebben wij er in totaal:
+            <div>Daar komen bij het verdubbelen precies <var>Number</var> knikker<span data-if="Number !== 1">s</span> bij. Nu hebben wij er in totaal:
                 <div class="graphie">
                     init({
                     range: [[-24, 24], [0, 10]],
@@ -56,16 +56,16 @@
                     });
 
                     for(i=1;i <= <var>Number</var>;i++) {circle([-25+(3*i), 3], 1, {
-                    fill: "purple",
-                    stroke: "red",
+                    fill: "teal",
+                    stroke: "gray",
                     strokeWidth: 5,
                     opacity: 0.6
                     });
                     }
 
                     for(i=1;i <= <var>Number</var>;i++) {circle([-25+(3*i), 8], 1, {
-                    fill: "purple",
-                    stroke: "red",
+                    fill: "teal",
+                    stroke: "gray",
                     strokeWidth: 5,
                     opacity: 0.6
                     });
@@ -73,7 +73,7 @@
                 </div>
             </div> 
         
-            <div>Door verder te tellen kom je uit op <code><var>Answer</var></code> knikker<span data-if="Number !== 1">s</span>.
+            <div>Door verder te tellen kom je uit op <var>Answer</var> knikker<span data-if="Number !== 1">s</span>.
             </div>
         </div>            
     </div>
