--- a/khan-exercises/exercises/ordering_numbers_till_2000.html
+++ b/khan-exercises/exercises/ordering_numbers_till_2000.html
@@ -75,7 +75,7 @@
 
                 <div class="solution" data-type="custom">
                     <div data-tt"solution1" class="instruction">
-                        Sleep de nummers naar links en naar rechts zodat ze op volgorde staan van klein naar groot
+                        Sleep de nummers naar links en naar rechts zodat ze op volgorde staan van klein naar groot.
                     </div>
                     <div class="guess">SORTER.getContent()</div>
                     <div class="validator-function">
@@ -91,11 +91,11 @@
                         <p data-tt="hint1">Voor elk getal gebruiken we een andere kleur..</p>
                         <p class="number-list"><code><var>NUMS_TEX_COLOR</var></code></p>
                     </div>
-                    <p data-tt="hint2">Zet deze getallen op de getallenlijn. Zo kunnen we zien welke kleiner en welke groter zijn.</p>
+                    <p data-tt="hint2">Zet deze getallen op de getallenlijn. Zo kunnen we zien welke kleiner en welke groter zijn. Doe eerst de getallen tot en met 10, daarna tot en met 100 en tot slot tot en met 2000.</p>
                     <div class="graphie" id="number-line">
                         init({
                             range: [ [-1, 2001], [-1, 1] ],
-                            scale: [ 4.5, 40 ]
+                            scale: [ 0.35, 40 ]
                         });
 
                         style({
