--- a/khan-exercises/exercises/divisibility_0.5.html
+++ b/khan-exercises/exercises/divisibility_0.5.html
@@ -48,7 +48,7 @@
                     <p data-tt="hint2">The only answer choice that divides into <code class="hint_blue"><var>A</var></code> with no remainder is <code class="hint_orange"><var>B</var></code>. <code>\quad<var>FACTOR</var></code> * <code class="hint_orange"><var>B</var></code> = <code class="hint_blue"><var>A</var></code>.</p>
                     <div>
                         <p data-tt="hint3">We can check our answer by looking at the prime factorization of both numbers. Notice that the prime factors of <code><var>B</var></code> are contained within the prime factors of <code><var>A</var></code>.</p>
-                        <p><code><var>A</var> = <var>FACTORIZATION_A.join( "\\times" )</var>\qquad\qquad<var>B</var> = <var>FACTORIZATION_B.join( "\\times" )</var></code>
+                        <p><code><var>A</var> = <var>FACTORIZATION_A.join( "\\times" )</var>\qquad\qquad<var>B</var> = <var>FACTORIZATION_B.join( "\\times" )</var></code></p>
                     </div>
                     <p data-tt="hint4">Therefore the only factor of <code class="hint_blue"><var>A</var></code> out of our choices is <code class="hint_orange"><var>B</var></code>. We can say that <code class="hint_blue"><var>A</var></code> is divisible by <code class="hint_orange"><var>B</var></code>.</p>
                 </div>
@@ -95,7 +95,7 @@
                     <p data-tt="hint8">The only answer choice that leaves no remainder after the division is <code class="hint_blue"><var>A</var></code>. <code>\quad<var>FACTOR</var></code> * <code class="hint_orange"><var>B</var></code> = <code class="hint_blue"><var>A</var></code>.</p>
                     <div>
                         <p data-tt="hint9">We can check our answer by looking at the prime factorization of both numbers. Notice that the prime factors of <code><var>B</var></code> are contained within the prime factors of <code><var>A</var></code>.</p>
-                        <p><code><var>A</var> = <var>FACTORIZATION_A.join( "\\times" )</var>\qquad\qquad<var>B</var> = <var>FACTORIZATION_B.join( "\\times" )</var></code>
+                        <p><code><var>A</var> = <var>FACTORIZATION_A.join( "\\times" )</var>\qquad\qquad<var>B</var> = <var>FACTORIZATION_B.join( "\\times" )</var></code></p>
                     </div>
                         <p data-tt="hint10">Therefore the only multiple of <code class="hint_orange"><var>B</var></code> out of our choices is <code class="hint_blue"><var>A</var></code>. We can say that <code class="hint_blue"><var>A</var></code> is divisible by <code class="hint_orange"><var>B</var></code>.</p>
                 </div>
